traversal.snake.Snake.scala.error
Compilation error:
Snake:5: error: value unary_! is not a member of Unit
  while(!positionFinale())
        ^Snake:33: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^Snake:33: warning: enclosing method positionFinale has result type Unit: return value discarded
      return true
      ^Snake:38: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:38: warning: enclosing method positionFinale has result type Unit: return value discarded
        return true
        ^Snake:45: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:45: warning: enclosing method positionFinale has result type Unit: return value discarded
        return true
        ^Snake:48: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    else return false
                ^Snake:48: warning: enclosing method positionFinale has result type Unit: return value discarded
    else return false
         ^